namespace java com.heepay.rpc.risk.model

struct TransactionModel {
	1:string merchantId;
    2:string merchantLoginName;
    3:string transType;
    4:string successAmount;
    5:string transNo;
    6:string successTime;
    7:string feeWay;
    8:string fee;
}